update some items related to Midas

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,10 +12,9 @@
 
   <div fxFlex="70%" fxLayout="column" fxLayoutAlign="center center" fxHide.lt-md class="cover">
     <div class="cover-content">
-      <h1 class="mat-display-1 cover-title">Mifos</h1>
+      <h1 class="mat-display-1 cover-title">MIDAS</h1>
       <p class="mat-headline cover-description">
-        Mifos X is designed by the <a href="http://www.openmf.org" target="_blank" class="cover-link">Mifos Initiative</a>. A <a href="http://mifos.org/resources/community/" target="_blank" class="cover-link">global community</a> that aims to speed the elimination of poverty by enabling Organizations to more effectively and efficiently deliver responsible financial services to the world’s poor and unbanked.
-        Sounds interesting? <a href="http://mifos.org/take-action/volunteer/" target="_blank" class="cover-link">Get involved!</a>
+        THE GOLD TOUCH
       </p>
     </div>
   </div>
@@ -38,7 +37,7 @@
 
     <!-- Logo with Organization Name -->
     <div fxLayout="row" fxLayoutAlign="center center" fxFlex="1 0 auto">
-      <img src="assets/images/mifos-logo-flat.png" alt="Mifos X Logo" class="img-container">
+      <img src="assets/images/midas-logo-flat.png" alt="Midas Logo" class="img-container">
     </div>
 
     <!--
