--- a/src/main.scss
+++ b/src/main.scss
@@ -3,7 +3,7 @@
  * Component-specific style should not go here and be included directly as part of the components.
  */
 
-// Import Default Theme for MifosX
+// Import Default Theme for MIDAS
 @import "theme/custom/denim-yellowgreen";
 
 // Global Imports
