--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
     <div class="cover-content">
       <h1 class="mat-display-1 cover-title">MIDAS</h1>
       <p class="mat-headline cover-description">
-        THE GOLD TOUCH
+        This is a Single Page Web that can help your Business grow !
       </p>
     </div>
   </div>
@@ -54,12 +54,13 @@
     </div>
 
     <!-- Contact Information/Resources (hidden on smaller screens) -->
+    <!--
     <mat-list fxHide.lt-lg fxLayout="row" fxFlexAlign="center" fxFlex="3 0 auto" class="information-list">
       <mat-list-item><button mat-button [matMenuTriggerFor]="resourcesMenu">Resources</button></mat-list-item>
       <mat-list-item><button mat-button [matMenuTriggerFor]="communityMenu">Community</button></mat-list-item>
       <mat-list-item><button mat-button [matMenuTriggerFor]="contributeMenu">Contribute</button></mat-list-item>
     </mat-list>
-
+    -->
     <!-- Footer -->
     <mifosx-footer></mifosx-footer>
 
@@ -68,6 +69,7 @@
 </div>
 
 <!-- Contact Information/Resources Menus -->
+<!--
 <mat-menu #resourcesMenu="matMenu">
   <a href="https://mifosforge.jira.com/wiki/spaces/docs/pages/52035622/User+Manual" target="_blank" mat-menu-item>User Manual</a>
   <a href="https://cwiki.apache.org/confluence/display/FINERACT/Apache+Fineract+1.0+Functional+Specifications" target="_blank" mat-menu-item>Functional Specifications</a>
@@ -85,3 +87,4 @@
   <a href="https://sourceforge.net/projects/mifos/" target="_blank" mat-menu-item>Working with Code</a>
   <a href="http://mifos.org/donate/" target="_blank" mat-menu-item>Donate</a>
 </mat-menu>
+-->
