--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,7 +34,7 @@
 
     </mat-card-content>
 
-    <img mat-card-image src="assets/images/midas_lg-logo.jpg" alt="Mifos X">
+    <img mat-card-image src="assets/images/midas_lg-logo.jpg" alt="MIDAS">
 
   </mat-card>
 
