--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,9 +12,9 @@
 
   <div fxFlex="70%" fxLayout="column" fxLayoutAlign="center center" fxHide.lt-md class="cover">
     <div class="cover-content">
-      <h1 class="mat-display-1 cover-title">MIDAS</h1>
+      <h1 class="mat-display-1 cover-title">{{'APP_NAME'| translate}}</h1>
       <p class="mat-headline cover-description">
-        This is a Single Page Web that can help your Business grow !
+        {{'Login_Component.APP_SLOGAN' | translate}}!
       </p>
     </div>
   </div>
