--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
 
     <mat-card-header>
       <mat-card-title class="title">
-        Welcome, {{ username }}!
+        {{'Home_Component.welcome'| translate}}!
       </mat-card-title>
     </mat-card-header>
 
