--- a/src/app/shared/language-selector/language-selector.component.html
+++ b/src/app/shared/language-selector/language-selector.component.html
@@ -1,7 +1,7 @@
-<mat-form-field id="language-selector">
+<mat-form-field id="language-selector" >
   <mat-label>Language</mat-label>
-  <mat-select [formControl]="languageSelector">
-    <mat-option *ngFor="let language of languages" [value]="language">
+  <mat-select [formControl]="languageSelector" [(value)]="selectedlang" (selectionChange)="setLanguage(selectedlang)">
+    <mat-option *ngFor="let language of languages" [value]="language" >
       {{ language }}
     </mat-option>
   </mat-select>
