--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -9,10 +9,10 @@
     </div>
     <div class="action-button" fxLayoutGap="25px">
       <button mat-raised-button color="primary" [routerLink]="['../', 'organization', 'bulk-import', 'Clients']" *mifosxHasPermission="'CREATE_CLIENT'">
-        <fa-icon icon="download"></fa-icon>&nbsp;&nbsp;{{'Client_Component.Import_Client'| translate}}
+        <fa-icon icon="download"></fa-icon>&nbsp;&nbsp;Import Client
       </button>
       <button mat-raised-button color="primary" [routerLink]="['create']" *mifosxHasPermission="'CREATE_CLIENT'">
-        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{'Client_Component.Create_Client' | translate}}
+        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Create Client
       </button>
     </div>
   </div>
@@ -21,25 +21,25 @@
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header='displayName'> {{'Client_Component.Name'| translate}} </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header='displayName'> Name </th>
         <td mat-cell *matCellDef="let row"> {{row.displayName}} </td>
       </ng-container>
 
       <!-- Account no Column -->
       <ng-container matColumnDef="clientno">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header='accountNo'> {{'Client_Component.Account'| translate}} </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header='accountNo'> Account # </th>
         <td mat-cell *matCellDef="let row"> {{row.accountNo}} </td>
       </ng-container>
 
       <!-- External ID Column -->
       <ng-container matColumnDef="externalid">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header='externalId'> {{'Client_Component.ExternalID'| translate}} </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header='externalId'> ExternalID </th>
         <td mat-cell *matCellDef="let row"> {{row.externalId}} </td>
       </ng-container>
 
       <!-- Status Column -->
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> {{'Client_Component.Status' | translate}} </th>
+        <th mat-header-cell *matHeaderCellDef> Status </th>
         <td mat-cell *matCellDef="let row">
           <div [ngClass]="row.active|statusLookup">
             <fa-icon icon="stop"></fa-icon>
@@ -49,25 +49,25 @@
 
       <!-- Mobile Number Column-->
       <ng-container matColumnDef="mobileNo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Client_Component.Mobile_Number' | translate }}</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Mobile Number </th>
         <td mat-cell *matCellDef="let client"> {{ client.mobileNo }} </td>
       </ng-container>
 
       <!--Gender column-->
       <ng-container matColumnDef="gender">
-        <th mat-header-cell *matHeaderCellDef> {{'Client_Component.Gender'| translate}} </th>
+        <th mat-header-cell *matHeaderCellDef> Gender </th>
         <td mat-cell *matCellDef="let client"> {{ client.gender.name }} </td>
       </ng-container>
 
       <!-- Color Column -->
       <ng-container matColumnDef="office">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header='officeName'> {{'Client_Component.OfficeName' | translate}} </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header='officeName'> OfficeName </th>
         <td mat-cell *matCellDef="let row"> {{row.officeName}} </td>
       </ng-container>
 
       <!-- ID Column -->
       <ng-container matColumnDef="staff">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header='staffName'> {{'Client_Component.StaffName' | translate}} </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header='staffName'> StaffName </th>
         <td mat-cell *matCellDef="let row"> {{row.staffName}} </td>
       </ng-container>
 
