--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column" id="footer" class="m-b-20">
   <mat-divider fxFlexAlign="center" class="divider"></mat-divider>
-  <p fxFlexAlign="center" class="footer-content">{{'Footer_component.Version' | translate}} {{ version }}</p>
-  <p fxFlexAlign="center" class="footer-content">{{'Footer_component.Midas is up to date' | translate}}</p>
+  <p fxFlexAlign="center" class="footer-content">{{'Footer_Component.Version' | translate}} {{ version }}</p>
+  <p fxFlexAlign="center" class="footer-content">{{'Footer_Component.Uptodate' | translate}}</p>
 </div>
