--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -12,32 +12,32 @@
             <mat-icon matListIcon>
               <fa-icon icon="briefcase" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Loan Products</h4>
-            <p matLine>Add new loan product or modify or inactivate loan product</p>
+            <h4 matLine>{{'Product_Component.loanProduct'| translate}}</h4>
+            <p matLine>{{'Product_Component.loanProductLabel'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['saving-products']" *mifosxHasPermission="'READ_SAVINGSPRODUCT'">
             <mat-icon matListIcon>
               <fa-icon icon="briefcase" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Savings Products</h4>
-            <p matLine>Add new savings product or modify or inactivate savings product</p>
+            <h4 matLine>{{'Product_Component.savingProduct'| translate}}</h4>
+            <p matLine>{{'Product_Component.savingProductLabel'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['share-products']" *mifosxHasPermission="'READ_SHAREPRODUCT'">
             <mat-icon matListIcon>
               <fa-icon icon="briefcase" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Share Products</h4>
-            <p matLine>Add new share product or modify or inactivate share product</p>
+            <h4 matLine>{{'Product_Component.shareProduct'| translate}}</h4>
+            <p matLine>{{'Product_Component.shareProductLabel'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['charges']" *mifosxHasPermission="'READ_CHARGE'">
             <mat-icon matListIcon>
               <fa-icon icon="money-bill-alt" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Charges</h4>
-            <p matLine>Define charges/penalties for loan products, savings and deposit products</p>
+            <h4 matLine>{{'Product_Component.charge'| translate}}</h4>
+            <p matLine>{{'Product_Component.chargeLabel'| translate}}</p>
           </mat-list-item>
 
         </mat-nav-list>
@@ -52,40 +52,40 @@
             <mat-icon matListIcon>
               <fa-icon icon="random" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Products Mix</h4>
-            <p matLine>Defines rules for taking multiple rules</p>
+            <h4 matLine>{{'Product_Component.productMix'| translate}}</h4>
+            <p matLine>{{'Product_Component.productMixLabel'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['fixed-deposit-products']" *mifosxHasPermission="'READ_FIXEDDEPOSITPRODUCT'">
             <mat-icon matListIcon>
               <fa-icon icon="briefcase" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Fixed Deposit Products</h4>
-            <p matLine>Add, modify or inactivate a Fixed deposit product</p>
+            <h4 matLine>{{'Product_Component.fixedDepositProduct'| translate}}</h4>
+            <p matLine>{{'Product_Component.fixedDepositProductLabel'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['recurring-deposit-products']" *mifosxHasPermission="'READ_RECURRINGDEPOSITPRODUCT'">
             <mat-icon matListIcon>
               <fa-icon icon="briefcase" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Recurring Deposit Products</h4>
-            <p matLine>Add, modify or inactivate a Recurring Deposit product</p>
+            <h4 matLine>{{'Product_Component.recurringDepositProduct'| translate}}</h4>
+            <p matLine>{{'Product_Component.recurringDepositProductLabel'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['tax-configurations']" *mifosxHasPermission="'READ_TAXGROUP'">
             <mat-icon matListIcon>
               <fa-icon icon="cogs" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Manage Tax Configurations</h4>
-            <p matLine>Define Tax components and Tax groups</p>
+            <h4 matLine>{{'Product_Component.manageTaxConfiguration'| translate}}</h4>
+            <p matLine>{{'Product_Component.manageTaxConfigurationLabel'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['floating-rates']" *mifosxHasPermission="'READ_FLOATINGRATE'">
             <mat-icon matListIcon>
               <fa-icon icon="money-bill-alt" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Floating Rates</h4>
-            <p matLine>Define floating rates for loan products</p>
+            <h4 matLine>{{'Product_Component.floatingRate'| translate}}</h4>
+            <p matLine>{{'Product_Component.floatingRateLabel'| translate}}</p>
           </mat-list-item>
 
         </mat-nav-list>
