fix client bugs
can't load address template.
wrong date Format

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
 
     <mat-card-header>
       <mat-card-title class="title">
-        {{'Home_Component.welcome'| translate}}!
+        {{'Home_Component.welcome'| translate : username}}!
       </mat-card-title>
     </mat-card-header>
 
