--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
 
     <mat-card-header>
       <mat-card-title class="title">
-        {{'Home_Component.welcome'| translate : username}}!
+        {{'Home_Component.welcome'| translate}} <strong>{{username}}</strong>!
       </mat-card-title>
     </mat-card-header>
 
@@ -21,7 +21,7 @@
         
       <div fxLayout="column">
         <mat-form-field>
-          <mat-label>Search Activity</mat-label>
+          <mat-label>{{'Home_Component.searchActiviy'| translate }}</mat-label>
           <input matInput [matAutocomplete]="activitySearch" [formControl]="searchText">
         </mat-form-field>
       </div>
